--- a/style.css
+++ b/style.css
@@ -57,3 +57,11 @@ button:hover {
     transition-duration: 0,5s;
     box-shadow: 0px 15px 20px #05103081;
 }
+
+
+@media (max-width: 768px) {
+    * {
+        margin: 0;
+        width: 100%;
+    }
+}
