--- a/style.css
+++ b/style.css
@@ -63,5 +63,9 @@ button:hover {
     * {
         margin: 0;
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
