--- a/style.css
+++ b/style.css
@@ -68,4 +68,11 @@ button:hover {
         align-items: center;
         justify-content: center;
     }
+
+    #form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
