--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ button:hover {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        background-size: cover;
     }
 
     #form {
