--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
     align-items: center;
 }
 
+img {
+    width: 100%;
+}
+
 #form {
     display: flex;
     flex-direction: column;
@@ -68,6 +72,11 @@ button:hover {
         align-items: center;
         justify-content: center;
         background-size: cover;
+    }
+
+    html, body {
+        width: 100vw;
+        height: 100vh;
     }
 
     #form {
