--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-image: url(./img/Vigilia.svg);
     background-repeat: no-repeat;
@@ -15,6 +20,7 @@ body {
 
 img {
     width: 100%;
+    margin: auto;
 }
 
 #form {
